Work on dialogues: server-client sync; proper node-branch structure