@@ -2,8 +2,8 @@ package com.valeriotor.beyondtheveil.dialogue;
 
 import com.google.common.collect.ImmutableList;
 import com.valeriotor.beyondtheveil.capability.PlayerData;
+import net.minecraft.client.resources.language.I18n;
 import net.minecraft.network.chat.Component;
-import net.minecraft.world.entity.player.Player;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -13,7 +13,7 @@ public class DialogueBranch {
     private String id;
     private int branchLength;
     private String endingNodeID;
-    private String translationKey; // can be null, then we just branch ID. Not used for player dialogue option, but for npc lines
+    private String translationKey; // can be null, then we just ending node ID. Not used for player dialogue option, but for npc lines
     private List<String> unlockedData = new ArrayList<>();
     private List<String> mustHaveData = new ArrayList<>();
     private List<String> mustNotHaveData = new ArrayList<>();
@@ -23,19 +23,30 @@ public class DialogueBranch {
         return this.id;
     }
 
-    public String getTranslationKey() {
-        return translationKey == null ? getBranchID() : translationKey;
+    public String getNpcLine(DialogueTemplate template, int indexInBranch) {
+        String key = translationKey == null ? getEndingNodeID() : translationKey;
+        return I18n.get("dialogue.%s.%s.%s.%d".formatted(template.getType().name().toLowerCase(), template.getID(), key, indexInBranch));
     }
 
-    public List<Component> getDialogueOptions(PlayerData data, DialogueTemplate template, int indexInBranch) {
-        if (indexInBranch >= branchLength) {
-            return template.getNodeByID(endingNodeID).getDialogueOptions(data).stream().map(b -> Component.translatable("dialogue.%s.%s.option".formatted(template.getType().name().toLowerCase(), b.getBranchID()))).collect(Collectors.toList());
+    public List<String> getDialogueOptions(PlayerData data, DialogueTemplate template, int indexInBranch) {
+        return getDialogueOptionKeys(data, template, indexInBranch).stream().map(I18n::get).toList();
+    }
+
+    private List<String> getDialogueOptionKeys(PlayerData data, DialogueTemplate template, int indexInBranch) {
+        if (indexInBranch >= branchLength - 1) {
+            if (endsDialogue) {
+                return List.of("dialogue.end");
+            }
+            return template.getNodeByID(endingNodeID).getDialogueOptions(data).stream().map(b -> "dialogue.%s.%s.%s.option".formatted(template.getType().name().toLowerCase(), template.getID(), b.getBranchID())).collect(Collectors.toList());
         }
-        return List.of(Component.translatable("dialogue.continue"));
+        return List.of("dialogue.continue");
     }
 
     public int getNumberOfDialogueOptions(PlayerData data, DialogueTemplate template, int indexInBranch) {
-        if (indexInBranch >= branchLength) {
+        if (indexInBranch >= branchLength - 1) {
+            if (endsDialogue) {
+                return 1;
+            }
             return template.getNodeByID(endingNodeID).getDialogueOptions(data).size();
         }
         return 1;
